--- a/docker_compose/wiki/docker-compose.yaml
+++ b/docker_compose/wiki/docker-compose.yaml
@@ -7,6 +7,8 @@ services:
           cpus: '1'
           memory: 2G
     restart: always
+    ports:
+      - 5432:5432
     volumes:
       - db-data:/var/lib/postgresql/data
     container_name: wiki-postgres
@@ -23,26 +25,29 @@ services:
     networks:
       - wiki
 
-  wiki:
-    image: ghcr.io/requarks/wiki:2
-    restart: always
-    container_name: wiki
-    ports:
-      - 38080:3000
-    environment:
-      - DB_TYPE=postgres
-      - DB_HOST=db
-      - DB_PORT=5432
-      - DB_USER=wiki
-      - DB_PASS=xzkjxzkj123!
-      - DB_NAME=wiki
-    depends_on:
-      - db
-    networks:
-      - wiki
+  #wiki:
+  #  image: ghcr.io/requarks/wiki:2
+  #  restart: always
+  #  container_name: wiki
+  #  volumes:
+  #    - wiki-data:/wiki/assets
+  #  ports:
+  #    - 38080:3000
+  #  environment:
+  #    - DB_TYPE=postgres
+  #    - DB_HOST=db
+  #    - DB_PORT=5432
+  #    - DB_USER=wiki
+  #    - DB_PASS=xzkjxzkj123!
+  #    - DB_NAME=wiki
+  #  depends_on:
+  #    - db
+  #  networks:
+  #    - wiki
 
 networks:
   wiki:
 
 volumes:
   db-data:
+#  wiki-data:
