--- a/docker_compose/emqx/docker-compose.yaml
+++ b/docker_compose/emqx/docker-compose.yaml
@@ -1,7 +1,7 @@
 networks:
   middleware:
     external: true
-    name: xiaozhi-project-network
+    name: xorigin-project-network
 services:
   emqx:
     container_name: emqx
@@ -19,28 +19,28 @@ services:
       interval: 5s
       retries: 3
       test:
-      - CMD
-      - /opt/emqx/bin/emqx_ctl
-      - status
+        - CMD
+        - /opt/emqx/bin/emqx_ctl
+        - status
       timeout: 20s
     hostname: emqx
-    image: emqx/emqx:5.7.1
+    image: emqx:5.8.8
     networks:
       middleware:
         aliases:
-        - node.emqx.com
+          - node.emqx.com
     ports:
-    - 1883:1883
-    - 18083:8083
-    - 18084:8084
-    - 8883:8883
-    - 28083:18083
-    - 18081:8081
+      - 1883:1883
+      - 18083:8083
+      - 18084:8084
+      - 8883:8883
+      - 28083:18083
+      - 18081:8081
     restart: always
     volumes:
-    - /emqx/data:/opt/emqx/data
-    - /emqx/log:/opt/emqx/log
-    - ./ssl/cert.pem:/etc/emqx/certs/cert.pem
-    - ./ssl/key.pem:/etc/emqx/certs/key.pem
-    - ./ssl/ca.pem:/etc/emqx/certs/ca.pem
-    - ./emqx.conf:/opt/emqx/etc/emqx.conf
+      - /emqx/data:/opt/emqx/data
+      - /emqx/log:/opt/emqx/log
+      - ./ssl/cert.pem:/etc/emqx/certs/cert.pem
+      - ./ssl/key.pem:/etc/emqx/certs/key.pem
+      - ./ssl/ca.pem:/etc/emqx/certs/ca.pem
+      - ./emqx.conf:/opt/emqx/etc/emqx.conf
